
syntax = "proto3";
package zpb;
option go_package = ".;zpb";
enum CommandList
{
    MT_INVALID = 0;
    MT_SERVER_TYPE_START = 1 ;
    // MT_TO_SERVER
    // MT_ADD_COMPONENT
	  MT_ADD_ENGINE_COMPONENT = 2 ;

    // MT_CENTER_TO_OTHER
    MT_ADD_ENGINE_COMPONENT_ACK = 10 ;
    MT_ADD_ENGINE_COMPONENT_LIST = 11 ;

    // MT_CLIENT_TO_GATE
    MT_GET_ALL_LOGIN_COMPONENT = 20 ;

    // MT_TO_ALL
    MT_SYNC_PROXY_PROPERTY = 30;
    MT_SET_REMOTE_PROPERTY =31;
}
