package zconf

const (
	MT_INVALID = iota

	MT_TO_ALL
	MT_TO_SERVER
	MT_TO_CLIENT
	MT_BROADCAST

	MT_TO_GAME_START = 1000

	MT_TO_GAME_END = 10000

	CodeOk = 0
	CodeError

	MT_SERVER_TYPE_START = 1
	// MT_TO_SERVER
	// MT_ADD_COMPONENT
	MT_ADD_ENGINE_COMPONENT = 2

	// MT_CENTER_TO_OTHER
	MT_ADD_ENGINE_COMPONENT_ACK  = 10
	MT_ADD_ENGINE_COMPONENT_LIST = 11

	// MT_CLIENT_TO_GATE
	MT_GET_ALL_LOGIN_COMPONENT = 20

	// MT_TO_ALL
	MT_SYNC_PROXY_PROPERTY = 30
	MT_SET_REMOTE_PROPERTY = 31
)

var (
	CommandList_name = map[int32]string{
		0:                            "MT_INVALID",
		MT_SERVER_TYPE_START:         "zpb.SERVER_TYPE_START",
		MT_ADD_ENGINE_COMPONENT:      "zpb.ADD_ENGINE_COMPONENT",
		MT_ADD_ENGINE_COMPONENT_ACK:  "zpb.ADD_ENGINE_COMPONENT_ACK",
		MT_ADD_ENGINE_COMPONENT_LIST: "zpb.ADD_ENGINE_COMPONENT_LIST",
		MT_GET_ALL_LOGIN_COMPONENT:   "zpb.GET_ALL_LOGIN_COMPONENT",
		MT_SYNC_PROXY_PROPERTY:       "zpb.SYNC_PROXY_PROPERTY",
		MT_SET_REMOTE_PROPERTY:       "zpb.SET_REMOTE_PROPERTY",
	}
)
